force-app/main/default/objects/Consumable_Order__c/Consumable_Order__c.object-meta.xml
<CustomObject>
    <label>Consumable Order</label>
    <nameField>
        <displayFormat>ORD - {0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumable Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>