force-app/main/default/objects/Consumable_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consumable Order</relationshipLabel>
    <relationshipName>Consumable_Order</relationshipName>
    <type>Lookup</type>
</CustomField>