force-app/main/default/objects/Consumable_Order__c/fields/Consumable_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Name__c</fullName>
    <label>Consumable Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>