force-app/main/default/objects/Consumable_Order__c/fields/Consumable_Type__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Type__c</fullName>
    <description>The type of consumable requested helps categorise and filter orders.</description>
    <label>Consumable Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reagent</fullName>
            </value>
            <value>
                <fullName>Cartridge</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>