force-app/main/default/objects/Consumable_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Expected or actual date for delivery of consumables.</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>