force-app/main/default/objects/Consumable_Order__c/fields/Instrument_Model__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Model__c</fullName>
    <formula>Instrument_Name__r.Model_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instrument Model</label>
    <type>Text</type>
</CustomField>