force-app/main/default/objects/Consumable_Order__c/fields/Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the instrument for which consumables are ordered. It references an Instrument object.</description>
    <label>Instrument Name</label>
    <referenceTo>Instrument__c</referenceTo>
    <relationshipLabel>Consumable Order</relationshipLabel>
    <relationshipName>Consumable_Order</relationshipName>
    <type>Lookup</type>
</CustomField>