force-app/main/default/objects/Consumable_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>The date and time when the consumable order was created or scheduled.</description>
    <label>Order Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>