force-app/main/default/objects/Consumable_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates who requested the order; links the order to a Salesforce user.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consumable_Order</relationshipName>
    <type>Lookup</type>
</CustomField>