force-app/main/default/objects/Consumable_Order__c/validationRules/VR_CO_ConsumableType_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CO_ConsumableType_Required</fullName>
    <active>true</active>
    <description>The Consumable Type must be there to save a record.</description>
    <errorConditionFormula>ISBLANK( TEXT( Consumable_Type__c ) )</errorConditionFormula>
    <errorDisplayField>Consumable_Type__c</errorDisplayField>
    <errorMessage>Please select the Consumable Type field to save a record.</errorMessage>
</ValidationRule>