force-app/main/default/objects/Consumable_Order__c/validationRules/VR_CO_InstrumentName_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CO_InstrumentName_Required</fullName>
    <active>true</active>
    <description>Forces entry for Instrument Name only when a relevant consumable type is selected.</description>
    <errorConditionFormula>AND(
       ISBLANK( Instrument_Name__c ) ,
        OR(
             ISPICKVAL( Consumable_Type__c , &quot;Cartridge&quot;),
             ISPICKVAL( Consumable_Type__c , &quot;Accessory&quot;) 
           ) 
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Instrument Name is required when ordering a Cartridge or Accessory.</errorMessage>
</ValidationRule>