force-app/main/default/objects/Consumable_Order__c/validationRules/VR_CO_Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CO_Quantity_Required</fullName>
    <active>true</active>
    <description>This rule prevents saving an order where the Quantity field is empty or zero, enforcing a positive value.</description>
    <errorConditionFormula>OR( ISBLANK( Quantity__c ) , Quantity__c   &lt;=  0)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>