force-app/main/default/objects/Consumable_Order__c/validationRules/VR_CO_RequestedBy_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CO_RequestedBy_Required</fullName>
    <active>true</active>
    <description>Knowing who requested the order is essential to creating an order.</description>
    <errorConditionFormula>ISBLANK( Requested_By__c )</errorConditionFormula>
    <errorDisplayField>Requested_By__c</errorDisplayField>
    <errorMessage>Please ensure the requesting person for the order.</errorMessage>
</ValidationRule>