force-app/main/default/objects/Consumable_Order__c/validationRules/VR_CO_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CO_Status_Required</fullName>
    <active>true</active>
    <description>Prevents reopening of cancelled orders, locking their status.</description>
    <errorConditionFormula>AND(
       ISPICKVAL( PRIORVALUE(Status__c), &quot;Cancelled&quot;),
       NOT( ISPICKVAL( Status__c , &quot;Cancelled&quot;) ) 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed once an order is cancelled.</errorMessage>
</ValidationRule>